Benchmark infrastructure for rescore prefetch testing
Add dropOsPageCache param to AbstractStatelessQueryBenchmark, move
blob cache prewarm to trial-level setup, and configure native access
for JMH forked VMs.